# extension-template

./: .editorconfig  .gitignore  .mdformat.toml  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  Taskfile.yaml  ]  bashdep.sh  build.sh  first-time-setup.sh  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.conda/: README.md  meta.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  has-functional-changes.sh  is-version-number-acceptable.sh  publish-git-tag.sh  test-api.sh  workflow.yml
.github/workflows/: _lint.yaml  _test.yaml  _type.yaml  _version.yaml  _web-api.yaml  push.yaml  test.yaml  workflow.yml
openfisca_extension_template/: local_benefit.py
openfisca_extension_template/parameters/local_town/: index.yaml
openfisca_extension_template/parameters/local_town/child_allowance/: amount.yaml  index.yaml
openfisca_extension_template/tests/: local_benefit.yaml  test_api.py
openfisca_extension_template/variables/: local_benefit.py
scripts/: build.sh
src/first_time_setup/: _checks.sh  _colours.sh  _envvars.sh  _helpers.sh  _messages.sh  _template.sh  _validate.sh  _version.sh  checks.sh  colours.sh  envvars.sh  main.sh  messages.sh  setup.sh  status.sh
src/first_time_setup/utils/: boolean.sh  colours.sh  git.sh  string.sh  subshell.sh  url.sh
src/openfisca_extension_template/parameters/: __init__.py
src/openfisca_extension_template/tests/: has-functional-changes.sh  test-api.sh  test-version.sh
src/openfisca_extension_template/variables/: __init__.py  local_benefit.py
tests/first_time_setup/: test_checks.sh  test_colours.sh  test_helpers.sh  test_validate.sh
tests/first_time_setup/helpers/: test_lowercase.sh  test_remove_apostrophes.sh  test_remove_spaces.sh  test_remove_special_characters.sh  test_snake_case.sh
tests/first_time_setup/utils/: test_colours.sh
tests/first_time_setup/utils/string/: test_decode.sh  test_lower.sh  test_sanitise.sh  test_snake.sh  test_trim.sh
