[tool.poetry]
name = "openfisca_extension_template"
version = "1.3.10"
description = "An extension adding new variables to a country package."
license = "AGPL-3.0-only"
authors = ["OpenFisca Team <contact@openfisca.org>"]
maintainers = ["OpenFisca Team <contact@openfisca.org>"]
readme = "README.md"
homepage = "https://openfisca.org"
repository = "https://github.com/openfisca/extension-template"
documentation = "https://openfisca.org/doc"
keywords = ["microsimulation", "tax", "benefit", "rac", "rules-as-code"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Information Analysis",
    ]
packages = [{include = "openfisca_extension_template", from = "src"}]

[tool.poetry.dependencies]
python = "~3.7.2 || ~3.8 || ~3.9"
openfisca_country_template = "^3.8.0"
autopep8 = {version = "^2.0.0", optional = true}
flake8 = {version = "^5.0.0", optional = true}
flake8-bugbear = {version = "^22.10.0", optional = true}
flake8-builtins = {version = "2.0.0", optional = true}
flake8-coding = {version = "^1.3.0", optional = true}
flake8-commas = {version = "^2.1.0", optional = true}
flake8-comprehensions = {version = "^3.10.0", optional = true}
flake8-docstrings = {version = "^1.6.0", optional = true}
flake8-import-order = {version = "^0.18.0", optional = true}
flake8-print = {version = "^5.0.0", optional = true}
flake8-quotes = {version = "^3.3.0", optional = true}
flake8-simplify = {version = "^0.19.0", optional = true}
flake8-use-fstring = {version = "^1.4.0", optional = true}
pycodestyle = {version = "^2.9.0", optional = true}
pylint = {version = "^2.15.0", optional = true}

[tool.poetry.extras]
test = [
    "autopep8",
    "flake8",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-coding",
    "flake8-commas",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-import-order",
    "flake8-print",
    "flake8-quotes",
    "flake8-simplify",
    "flake8-use-fstring",
    "pycodestyle",
    "pylint",
    ]

[build-system]
requires = ["poetry-core >= 1.2.0"]
build-backend = "poetry.core.masonry.api"
